--- a/words_discoverer_chrome/_locales/zh_CN/messages.json
+++ b/words_discoverer_chrome/_locales/zh_CN/messages.json
@@ -1,6 +1,7 @@
 {
   "appName": {
-    "message": "单词发现者：扩大您的词汇",
+//    "message": "COPY 单词发现者：扩大您的词汇",
+    "message": "WD Hight Word",
     "description": "The title of the application, displayed in the web store."
   },
   "appDesc": {
