--- a/words_discoverer_chrome/_locales/de/messages.json
+++ b/words_discoverer_chrome/_locales/de/messages.json
@@ -1,6 +1,7 @@
 {
   "appName": {
-    "message": "Words Discoverer: Erweitern Sie Ihren Wortschatz (Wort-Entdecker)",
+//    "message": "Words Discoverer: Erweitern Sie Ihren Wortschatz (Wort-Entdecker)",
+    "message": "WD Hight Word",
     "description": "The title of the application, displayed in the web store."
   },
   "appDesc": {
