--- a/words_discoverer_chrome/_locales/fr/messages.json
+++ b/words_discoverer_chrome/_locales/fr/messages.json
@@ -1,6 +1,7 @@
 {
   "appName": {
-    "message": "Words Discoverer : Développez votre vocabulaire",
+    "message": "WD Hight Word",
+//    "message": "Words Discoverer : Développez votre vocabulaire",
     "description": "The title of the application, displayed in the web store. Note to the translator: Do not translate first two words 'Words Discoverer'"
   },
   "appDesc": {
