--- a/words_discoverer_chrome/_locales/ko/messages.json
+++ b/words_discoverer_chrome/_locales/ko/messages.json
@@ -1,6 +1,7 @@
 {
   "appName": {
-    "message": "Words Discoverer: 어휘력을 늘리세요.",
+//    "message": "Words Discoverer: 어휘력을 늘리세요.",
+    "message": "WD Hight Word",
     "description": "The title of the application, displayed in the web store. Note to the translator: Do not translate first two words 'Words Discoverer'"
   },
   "appDesc": {
